# pyoptdb

./: AUTHORS  NOTICE  README.md  pyproject.toml  requirements.txt
src/pyoptdb/: __init__.py  __main__.py  cli.py  config.py  init.py  insert.py  schema.sql
src/pyoptdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
